Package_Tools/include-C/Ubuntu_26.04/gstreamer-1.0/gst/webrtc/h/ice.h

#define __GST_WEBRTC_ICE_H__
extern
GType gst_webrtc_ice_get_type(void);
#define GST_TYPE_WEBRTC_ICE            (gst_webrtc_ice_get_type())
#define GST_WEBRTC_ICE(obj)            (G_TYPE_CHECK_INSTANCE_CAST((obj),GST_TYPE_WEBRTC_ICE,GstWebRTCICE))
#define GST_WEBRTC_ICE_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST((klass) ,GST_TYPE_WEBRTC_ICE,GstWebRTCICEClass))
#define GST_IS_WEBRTC_ICE(obj)         (G_TYPE_CHECK_INSTANCE_TYPE((obj),GST_TYPE_WEBRTC_ICE))
#define GST_IS_WEBRTC_ICE_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE((klass) ,GST_TYPE_WEBRTC_ICE))
#define GST_WEBRTC_ICE_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS((obj) ,GST_TYPE_WEBRTC_ICE,GstWebRTCICEClass))
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_ADDRESS:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_ADDRESS(c) ((c)->ipaddr)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_PORT:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_PORT(c) ((c)->port)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_STREAM_ID:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_STREAM_ID(c) ((c)->stream_id)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_TYPE:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_TYPE(c) ((c)->type)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_PROTOCOL:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_PROTOCOL(c) ((c)->proto)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_RELAY_PROTOCOL:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_RELAY_PROTOCOL(c) ((c)->relay_proto)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_PRIORITY:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_PRIORITY(c) ((c)->prio)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_URL:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_URL(c) ((c)->url)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_FOUNDATION:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_FOUNDATION(c) ((c)->ABI.abi.foundation)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_RELATED_ADDRESS:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_RELATED_ADDRESS(c) ((c)->ABI.abi.related_address)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_RELATED_PORT:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_RELATED_PORT(c) ((c)->ABI.abi.related_port)
/**
 * GST_WEBRTC_ICE_CANDIDATE_STATS_USERNAME_FRAGMENT:
 *
 * Since: 1.28
 */
#define GST_WEBRTC_ICE_CANDIDATE_STATS_USERNAME_FRAGMENT(c) ((c)->ABI.abi.username_fragment)
/**
 * GstWebRTCICEOnCandidateFunc:
 * @ice: The #GstWebRTCICE
 * @stream_id: The stream id
 * @candidate: The discovered candidate
 * @user_data: User data that was set by #gst_webrtc_ice_set_on_ice_candidate
 *
 * Callback function to be triggered on discovery of a new candidate
 * Since: 1.22
 */
typedef void (*GstWebRTCICEOnCandidateFunc) (GstWebRTCICE * ice, guint stream_id, const gchar * candidate, gpointer user_data);
extern
GstWebRTCICEStream *        gst_webrtc_ice_add_stream               (GstWebRTCICE * ice,
                                                                     guint session_id) ;
extern
GstWebRTCICETransport *     gst_webrtc_ice_find_transport           (GstWebRTCICE * ice,
                                                                     GstWebRTCICEStream * stream,
                                                                     GstWebRTCICEComponent component) ;
extern
gboolean                    gst_webrtc_ice_gather_candidates        (GstWebRTCICE * ice,
                                                                     GstWebRTCICEStream * stream);
/* FIXME: GstStructure-ize the candidate */
extern
void                        gst_webrtc_ice_add_candidate            (GstWebRTCICE * ice,
                                                                     GstWebRTCICEStream * stream,
                                                                     const gchar * candidate,
                                                                     GstPromise * promise);
extern
gboolean                    gst_webrtc_ice_set_local_credentials    (GstWebRTCICE * ice,
                                                                     GstWebRTCICEStream * stream,
                                                                     const gchar * ufrag,
                                                                     const gchar * pwd);
extern
gboolean                    gst_webrtc_ice_set_remote_credentials   (GstWebRTCICE * ice,
                                                                     GstWebRTCICEStream * stream,
                                                                     const gchar * ufrag,
                                                                     const gchar * pwd);
extern
gboolean                    gst_webrtc_ice_add_turn_server          (GstWebRTCICE * ice,
                                                                     const gchar * uri);
extern
void                        gst_webrtc_ice_set_is_controller        (GstWebRTCICE * ice,
                                                                     gboolean controller);
extern
gboolean                    gst_webrtc_ice_get_is_controller        (GstWebRTCICE * ice);
extern
void                        gst_webrtc_ice_set_force_relay          (GstWebRTCICE * ice,
                                                                     gboolean force_relay);
extern
void                        gst_webrtc_ice_set_stun_server          (GstWebRTCICE * ice,
                                                                     const gchar * uri);
extern
gchar *                     gst_webrtc_ice_get_stun_server          (GstWebRTCICE * ice) ;
extern
void                        gst_webrtc_ice_set_turn_server          (GstWebRTCICE * ice,
                                                                     const gchar * uri);
extern
gchar *                     gst_webrtc_ice_get_turn_server          (GstWebRTCICE * ice) ;
extern
void                        gst_webrtc_ice_set_http_proxy           (GstWebRTCICE * ice,
                                                                     const gchar * uri);
extern
gchar *                     gst_webrtc_ice_get_http_proxy           (GstWebRTCICE * ice) ;
extern
void                        gst_webrtc_ice_set_on_ice_candidate     (GstWebRTCICE * ice,
                                                                     GstWebRTCICEOnCandidateFunc func,
                                                                     gpointer user_data,
                                                                     GDestroyNotify notify);
extern
void                        gst_webrtc_ice_set_tos                  (GstWebRTCICE * ice,
                                                                     GstWebRTCICEStream * stream,
                                                                     guint tos);
extern
GstWebRTCICECandidateStats** gst_webrtc_ice_get_local_candidates    (GstWebRTCICE * ice,
                                                                     GstWebRTCICEStream * stream) ;
extern
GstWebRTCICECandidateStats** gst_webrtc_ice_get_remote_candidates   (GstWebRTCICE * ice,
                                                                     GstWebRTCICEStream * stream) ;
//xxxxxxxx GST_WEBRTC_DEPRECATED_FOR(gst_webrtc_ice_transport_get_selected_pair)
gboolean                    gst_webrtc_ice_get_selected_pair        (GstWebRTCICE * ice,
                                                                     GstWebRTCICEStream * stream,
                                                                     GstWebRTCICECandidateStats ** local_stats,
                                                                     GstWebRTCICECandidateStats ** remote_stats);
extern
void                        gst_webrtc_ice_candidate_stats_free     (GstWebRTCICECandidateStats * stats);
extern
GType                       gst_webrtc_ice_candidate_stats_get_type (void);
////////////////////////////////G_DEFINE_AUTOPTR_CLEANUP_FUNC                (GstWebRTCICE, gst_object_unref)

extern
GstWebRTCICECandidateStats * gst_webrtc_ice_candidate_stats_copy   (GstWebRTCICECandidateStats *stats) ;
extern
void                         gst_webrtc_ice_close                  (GstWebRTCICE * ice,
                                                                    GstPromise * promise);
extern
void                        gst_webrtc_ice_candidate_free           (GstWebRTCICECandidate * candidate);
extern
GType                       gst_webrtc_ice_candidate_get_type       (void);
extern
GstWebRTCICECandidate *     gst_webrtc_ice_candidate_copy           (GstWebRTCICECandidate * candidate);
extern
void                        gst_webrtc_ice_candidate_pair_free      (GstWebRTCICECandidatePair * pair);
extern
GType                       gst_webrtc_ice_candidate_pair_get_type  (void);
extern
GstWebRTCICECandidatePair * gst_webrtc_ice_candidate_pair_copy      (GstWebRTCICECandidatePair * pair);